<resources>
    <string name="app_name"></string>
    <string name="picture">Picture</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="myPhoto">My Images</string>
    <string name="myVideo">My Video</string>
    <string name="myMusic">My Music</string>
    <string name="music_media_manager">MEDIA MANAGER</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="Login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="Sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="your_email">Your Email</string>
    <string name="reset_password">Reset password</string>
    <string name="your_phone">Your phone</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="ban_chua_nhap_ten_dang_nhap">Bạn chưa nhập tên đăng nhập!</string>
    <string name="ban_chua_nhap_mat_khau">Bạn chưa nhập mật khẩu!</string>
    <string name="ban_chua_nhap_mat_khau_xac_nhan">Bạn chưa nhập mật khẩu xác nhận!</string>
    <string name="ban_chua_nhap_so_dien_thoai">Bạn chưa nhập số điện thoại!</string>
    <string name="ban_chua_nhap_email">Bạn chưa nhập email</string>
    <string name="dang_nhap_thanh_cong">Đăng nhập thành công</string>
    <string name="ban_da_nhap_sai_ten_dang_nhap_hoac_mat_khau">Bạn đã nhập sai tên đăng nhập hoặc mật khẩu.</string>
    <string name="ten_dang_nhap_phai_chua_nhieu_hon_8_ky_tu">Tên đăng nhập phải nhiều hơn 8 ký tự!</string>
    <string name="mat_khau_phai_nhieu_hon_hoac_bang_8_ky_tu">Mật khẩu phải nhiều hơn hoặc bằng 8 ký tự!</string>
    <string name="mat_khau_xac_nhan_khong_chinh_xac">Mật khẩu xác nhận không chính xác!</string>
    <string name="vui_long_nhap_so_dien_thoai_cua_ban">Vui lòng nhập số điện thoại của bạn</string>
    <string name="vui_long_nhap_email_cua_ban">Vui lòng nhập email của bạn!</string>
    <string name="vui_long_nhap_cac_thong_tin_can_thiet">Vui lòng nhập các thông tin cần thiết!</string>
    <string name="he_thong_ban_vui_long_thu_lai_sau">Hệ thống bận, vui lòng thử lại sau.</string>
    <string name="ten_nhap_da_ton_tai_vui_long_nhap_ten_dang_nhap_khac">Tên đăng nhập đã tồn tại, vui lòng nhập tên đăng nhập khác.</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="anh_he_thong">Ảnh hệ thống</string>
    <string name="doi_mat_khau">ĐỔI MẬT KHẨU</string>
    <string name="nhap_mat_khau_cu">Nhập mật khẩu cũ</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="xac_nhan_mat_khau_moi">Xác nhận mật khẩu mới</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="doi_mat_khau_v2">Đổi mật khẩu</string>
    <string name="tao_tai_khoan">Tạo tài khoản</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap_voi">Đăng nhập với</string>
    <string name="tao_tai_khoan_voi">Tạo tài khoản với</string>
    <string name="mat_khau_khong_chinh_xac">Mật khẩu không chính xác</string>
    <string name="mat_khau_moi_phai_khac_mat_khau_cu">Mật khẩu mới phải khác mật khẩu cũ</string>
    <string name="xac_nhan_doi_mat_khau">Xác nhận đổi mật khẩu</string>
</resources>
