<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="4dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:gravity="center"
            android:text="@string/doi_mat_khau"
            android:textColor="@color/colorWhile"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nhap_mat_khau_cu"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_round_corner_edittext_v2"
            android:ellipsize="end"
            android:hint="@string/mat_khau_cu"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_old_password_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mat_khau_khong_chinh_xac"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nhap_mat_khau_moi"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_round_corner_edittext_v2"
            android:ellipsize="end"
            android:hint="@string/mat_khau_moi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_password_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mat_khau_phai_nhieu_hon_hoac_bang_8_ky_tu"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_password_wrong2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mat_khau_moi_phai_khac_mat_khau_cu"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/xac_nhan_mat_khau_moi"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_again_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_round_corner_edittext_v2"
            android:ellipsize="end"
            android:hint="@string/xac_nhan_mat_khau"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_again_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mat_khau_xac_nhan_khong_chinh_xac"
            android:textColor="@color/colorRed"
            android:textSize="10sp"
            android:visibility="gone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.t3h.mediamanager1.customview.UICustomButton
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/custom_round_corner_button_v2"
                android:text="@string/doi_mat_khau_v2"
                android:textAllCaps="false"
                android:textColor="@color/colorWhile"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>