<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/custom_round_corner_edittext"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/create_account"
        android:textColor="@color/colorBlue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:hint="Username"
        android:padding="16dp"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:hint="Password"
        android:padding="16dp"
        android:textSize="12sp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:hint="@string/reset_password"
        android:padding="16dp"
        android:textSize="12sp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_your_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:hint="@string/your_phone"
        android:padding="16dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edt_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:hint="@string/your_email"
        android:padding="16dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_round_corner_button"
        android:text="@string/Sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorWhile"
        android:textSize="13sp" />


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tv_sign_up"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/colorBlue"
        android:textSize="12sp"
        android:paddingBottom="10dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp">
        
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_facebook"/>

        <ImageView
            android:layout_marginLeft="30dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_google"/>
        
    </LinearLayout>

</LinearLayout>