<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_login"
    android:orientation="vertical"
    android:background="@drawable/custom_round_corner_edittext"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:background="@drawable/custom_round_corner_edittext"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:background="@drawable/custom_round_corner_edittext"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#A1A1A1"
        android:layout_marginRight="16dp"
        android:gravity="right"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_round_corner_button"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhile"
        android:textSize="13sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:paddingBottom="30dp">

        <TextView
            android:layout_toLeftOf="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="12sp"/>

        <TextView
            android:layout_marginLeft="2dp"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up"
            android:textColor="@color/colorBlue"
            android:textSize="12sp"/>

    </RelativeLayout>

</LinearLayout>